# MAPF

./: .gitignore  CMakeLists.txt  Flow Diagram.drawio  MAPF  README.md
Automation Scripts/: grapher.py  map_parser.py  map_parser_json.py  map_parser_yaml.py  my_agents.json  my_map.json  test.py  test.yaml
Automation Scripts/configs/: my_agents_agent_2_goals_10_config_1.json  my_agents_agent_2_goals_10_config_10.json  my_agents_agent_2_goals_10_config_2.json  my_agents_agent_2_goals_10_config_3.json  my_agents_agent_2_goals_10_config_4.json  my_agents_agent_2_goals_10_config_5.json  my_agents_agent_2_goals_10_config_6.json  my_agents_agent_2_goals_10_config_7.json  my_agents_agent_2_goals_10_config_8.json  my_agents_agent_2_goals_10_config_9.json  my_agents_agent_2_goals_11_config_1.json  my_agents_agent_2_goals_11_config_10.json  my_agents_agent_2_goals_11_config_2.json  my_agents_agent_2_goals_11_config_3.json  my_agents_agent_2_goals_11_config_4.json  my_agents_agent_2_goals_11_config_5.json  my_agents_agent_2_goals_11_config_6.json  my_agents_agent_2_goals_11_config_7.json  my_agents_agent_2_goals_11_config_8.json  my_agents_agent_2_goals_11_config_9.json  my_agents_agent_2_goals_12_config_1.json  my_agents_agent_2_goals_12_config_10.json  my_agents_agent_2_goals_12_config_2.json  my_agents_agent_2_goals_12_config_3.json  my_agents_agent_2_goals_12_config_4.json  my_agents_agent_2_goals_12_config_5.json  my_agents_agent_2_goals_12_config_6.json  my_agents_agent_2_goals_12_config_7.json  my_agents_agent_2_goals_12_config_8.json  my_agents_agent_2_goals_12_config_9.json  my_agents_agent_2_goals_13_config_1.json  my_agents_agent_2_goals_13_config_10.json  my_agents_agent_2_goals_13_config_2.json  my_agents_agent_2_goals_13_config_3.json  my_agents_agent_2_goals_13_config_4.json  my_agents_agent_2_goals_13_config_5.json  my_agents_agent_2_goals_13_config_6.json  my_agents_agent_2_goals_13_config_7.json  my_agents_agent_2_goals_13_config_8.json  my_agents_agent_2_goals_13_config_9.json  (+118 more)
Automation Scripts/configs161x63/: my_agents_agent_10_goals_10_config_1.json  my_agents_agent_10_goals_10_config_2.json  my_agents_agent_10_goals_2_config_1.json  my_agents_agent_10_goals_2_config_2.json  my_agents_agent_10_goals_3_config_1.json  (+157 more)
CBS/: AStar.cpp  AStar.h  AStarSearch.cpp  AStarSearch.h  Agent.cpp  Agent.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  CMakeLists.txt  ConstraintForest.cpp  ConstraintForest.h  ConstraintTree.cpp  ConstraintTree.h  Definitions.h  GoalTraversalOrders.cpp  GoalTraversalOrders.h  Graph.cpp  Graph.h  LowLevelSearch.cpp  LowLevelSearch.h  MAPF  Makefile  Node.cpp  Node.h  TSP.cpp  TSP.h  TSPBNB.cpp  TSPBNB.h  TSPBranchAndBound.cpp  TSPBranchAndBound.h  TSPGreedy.cpp  TSPGreedy.h  TSPNearestNeighbour.cpp  TSPNearestNeighbour.h  Untitled Diagram.drawio  Vertex.cpp  Vertex.h  agent.cpp  agent.h  constraint_tree.cpp  (+11 more)
(+1794 files in other folders)
